# xai-crop-yield

./: .gitignore  Home.py  LICENSE  Makefile  README.md  pyproject.toml
data/interim/: predictions.fgb
data/raw/: splits.csv
models/: checkpoint.ckpt
pages/: 1_🌱_Soybean crop yield XAI.py
tests/: test_dataset.py
tests/modeling/: test_tune.py  test_xai.py
xai_crop_yield/: __init__.py  config.py  dataset.py  features.py  plots.py
xai_crop_yield/modeling/: train.py  tune.py  xai.py
